<resources>
    <string name="app_name">Colors</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="Target_color">Target Color</string>
    <string name="Proposed_color">Proposed Color</string>
    <string name="Score">Score</string>
    <string name="Your_score_is">Your score is %1$s</string>
    <string name="X_is_Y">%1$s is %2$s</string>
    <string name="Low">Low</string>
    <string name="Very_low">Very low</string>
    <string name="High">High</string>
    <string name="Very_high">Very high</string>
    <string name="New">New</string>
    <string name="Tips">Tips</string>
    <string name="Close">Close</string>
    <string name="title_activity_main3">MainActivity3</string>
</resources>