<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGetScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/Score"
        app:layout_constraintBottom_toTopOf="@+id/btnNewColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNewColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/New"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/lblBlueTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/Blue"
        app:layout_constraintBottom_toTopOf="@+id/btnGetScore"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblBlueValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="204"
        app:layout_constraintBottom_toTopOf="@+id/btnGetScore"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/sbrBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:max="255"
        android:progress="204"
        android:progressTint="#00B"
        android:thumbTint="#00B"
        app:layout_constraintBottom_toTopOf="@+id/btnGetScore"
        app:layout_constraintEnd_toStartOf="@+id/lblBlueValue"
        app:layout_constraintStart_toEndOf="@+id/lblBlueTitle" />


    <TextView
        android:id="@+id/lblGrenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/Green"
        app:layout_constraintBottom_toTopOf="@+id/lblBlueTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/sbrGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:max="255"
        android:progress="153"
        android:progressTint="#0B0"
        android:thumbTint="#0B0"
        app:layout_constraintBottom_toTopOf="@+id/sbrBlue"
        app:layout_constraintEnd_toStartOf="@+id/lblGreenValue"
        app:layout_constraintStart_toEndOf="@+id/lblGrenTitle" />

    <TextView
        android:id="@+id/lblGreenValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:text="153"
        app:layout_constraintBottom_toTopOf="@+id/lblBlueValue"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/lblRedTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/Red"
        app:layout_constraintBottom_toTopOf="@+id/lblGrenTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/sbrRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:max="255"
        android:progress="102"
        android:progressTint="#B00"
        android:thumbTint="#B00"
        app:layout_constraintBottom_toTopOf="@+id/sbrGreen"
        app:layout_constraintEnd_toStartOf="@+id/lblRedValue"
        app:layout_constraintStart_toEndOf="@+id/lblRedTitle" />

    <TextView
        android:id="@+id/lblRedValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:text="102"
        app:layout_constraintBottom_toTopOf="@+id/lblGreenValue"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/lblProposedColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="#6699CC"
        android:gravity="center"
        android:text="@string/Proposed_color"
        app:layout_constraintBottom_toTopOf="@+id/lblRedTitle"
        app:layout_constraintEnd_toStartOf="@+id/lblTargetColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTargetColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="#777"
        android:gravity="center"
        android:text="@string/Target_color"
        app:layout_constraintBottom_toTopOf="@+id/lblRedValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblProposedColor"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
